--- a/iservice/package.json
+++ b/iservice/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "@types/react-native-simple-radio-button": "^2.7.0",
     "axios": "^0.21.0",
     "expo": "~40.0.0",
     "expo-location": "~10.0.0",
@@ -26,6 +27,7 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.2.1"
   },
