--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,9 @@
   "name": "iservice-backend",
   "version": "0.0.1",
   "description": "iSevice Backend",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "tsc && node ./dist/app.js",
+    "start": "tsc && cp .env ./dist && node ./dist/app.js",
     "debug": "cross-env DEBUG=* npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "argon2": "^0.27.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "debug": "^4.2.0",
@@ -25,6 +26,7 @@
     "http-codes": "^1.0.0",
     "http-status-codes": "^2.1.4",
     "joi": "^17.4.0",
+    "jwt-simple": "^0.5.6",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.2",
     "shortid": "^2.2.16",
@@ -32,10 +34,12 @@
   },
   "devDependencies": {
     "@types/argon2": "^0.15.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.7",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.2",
     "@types/joi": "^17.2.3",
+    "@types/jwt-simple": "^0.5.33",
     "@types/shortid": "0.0.29",
     "@types/validator": "^13.1.3",
     "cross-env": "^6.0.3",
