--- a/iservice/package.json
+++ b/iservice/package.json
@@ -9,10 +9,10 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/picker": "^1.8.1",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
-    "@types/react-native-simple-radio-button": "^2.7.0",
     "axios": "^0.21.0",
     "expo": "~40.0.0",
     "expo-location": "~10.0.0",
@@ -35,7 +35,8 @@
     "@babel/core": "~7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
-    "@types/react-native": "~0.63.2",
+    "@types/react-native": "^0.63.52",
+    "@types/react-native-simple-radio-button": "^2.7.0",
     "@types/styled-components": "^5.1.5",
     "typescript": "~4.0.0"
   },
