--- a/iservice/package.json
+++ b/iservice/package.json
@@ -24,14 +24,17 @@
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-maps": "^0.27.1",
+    "react-native-masked-text": "^1.13.0",
     "react-native-modalize": "^2.0.8",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-simple-radio-button": "^2.7.4",
+    "react-native-text-input-mask": "^3.1.4",
     "react-native-web": "~0.13.12",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "tslib": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
