--- a/iservice/package.json
+++ b/iservice/package.json
@@ -23,6 +23,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-google-places-autocomplete": "^2.2.0",
     "react-native-maps": "^0.27.1",
     "react-native-masked-text": "^1.13.0",
     "react-native-modalize": "^2.0.8",
