--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.0",
     "expo": "^42.0.0",
+    "expo-image-picker": "~10.2.2",
     "expo-location": "~12.1.2",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
@@ -35,7 +36,8 @@
     "react-native-text-input-mask": "^3.1.4",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.2.1",
-    "tslib": "^2.2.0"
+    "tslib": "^2.2.0",
+    "unimodules-permissions-interface": "^6.1.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
