--- a/mobile/package.json
+++ b/mobile/package.json
@@ -29,6 +29,7 @@
     "react-native-google-places-autocomplete": "^2.2.0",
     "react-native-maps": "0.28.0",
     "react-native-masked-text": "^1.13.0",
+    "react-native-modal": "^13.0.0",
     "react-native-modalize": "^2.0.8",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.2.0",
