--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "http-status-codes": "^2.1.4",
     "joi": "^17.4.0",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.6.3",
     "sequelize": "^6.6.2",
     "shortid": "^2.2.16",
     "winston": "^3.3.3"
@@ -36,6 +37,7 @@
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.2",
     "@types/joi": "^17.2.3",
+    "@types/nodemailer": "^6.4.4",
     "@types/shortid": "0.0.29",
     "@types/validator": "^13.1.3",
     "cross-env": "^6.0.3",
