--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.0",
     "expo": "^42.0.0",
     "expo-image-picker": "~10.2.2",
+    "expo-linking": "~2.3.1",
     "expo-location": "~12.1.2",
     "expo-status-bar": "~1.0.4",
     "lottie-react-native": "4.0.2",
